fix for scrolling on small screens

--- a/style.css
+++ b/style.css
@@ -1126,7 +1126,7 @@ input#importSaveText {
 #heroList {
     display: flex;
     flex-wrap: wrap;
-    align-self: flex-start;
+    align-content: start;
     padding: 20px;
     overflow: auto;
 }
